--- a/config.env
+++ b/config.env
@@ -1,2 +1,4 @@
-PORT=3000
+NODE_ENV = development
+PORT=5000
 MONGO_URI=mongodb+srv://admin:admin123@cluster0.mdevjbj.mongodb.net/?retryWrites=true&w=majority
+JWT_SECRET = abc123
