Co-authored-by: M. Fadhil Mahendra <mfmahendr@users.noreply.github.com> Co-authored-by: MichaelHamonangan <MichaelHamonangan@users.noreply.github.com> Co-authored-by: Amakoy <Amakoy@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "mongoose": "^5.10.11",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20"
+  },
+  "devDependencies": {
+    "css-loader": "^6.7.2"
   }
 }
