--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,19 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/react-router-dom": "^5.3.3",
     "bulma": "^0.9.4",
+    "dotenv": "^16.0.3",
+    "fs": "0.0.1-security",
+    "fs-path": "0.0.25",
+    "os": "^0.1.2",
+    "os-browserify": "^0.3.0",
+    "path": "^0.12.7",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.1",
     "sass": "^1.56.1",
     "web-vitals": "^2.1.4"
